[package]
name = "sol-tx-send"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
rand = "0.9.2"
solana-sdk = "2.2.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
log = "0.4"
dotenvy = "0.15"
bincode = "1.3"
solana-client = "2.2.2"
lazy_static = "1.4"
