[package]
name = "sol-tx-send"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
rand = "0.9.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
log = "0.4"
dotenvy = "0.15"
bincode = "1.3"
lazy_static = "1.4"
serde = "1.0.219"
solana-sdk = "3.0.0"
solana-client = "3.0.8"
solana-compute-budget-interface = "3.0.0"
solana-system-interface = "2.0.0"
utils = { git = "https://github.com/miaomiaowu0428/sol-utils.git" }
