[package]
name = "sol-tx-send"
version = "0.2.0-alpha.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
rand = "0.9.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"
log = "0.4"
dotenvy = "0.15"
bincode = "1.3"
lazy_static = "1.5"
serde = "1.0.228"
solana-sdk = "3.0.0"
solana-client = "3.1.8"
solana-compute-budget-interface = "3.0.0"
solana-system-interface = "2.0.0"
utils = { git = "https://github.com/miaomiaowu0428/sol-utils.git" }
rustls = "0.23.36"
solana-tls-utils = "3.1.8"
anyhow = "1.0.100"
quinn = "0.11.9"
